sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1:8: error: '(' expected but identifier found.
                      if plusPetit(i+1,i){echange(i,i+1);x=true}
                         ^AlgCocktailSort1:9: error: illegal start of simple expression
                    }}}
                    ^